--- a/ClothesPicker/Test.ipynb
+++ b/ClothesPicker/Test.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "import numpy as np\n",
     "import random\n",
     "import json\n",
-    "import re"
+    "import re\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -265,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "cookie_dict = {\n",
-    "    \"__Secure-1PSID\": \"\",\n",
-    "    \"__Secure-1PSIDTS\": \"\"\n",
+    "    \"__Secure-1PSID\": \"aQiKlcuJ8XuzNiptVGh6CLzm-UC7CgHSNcGiGNkfS0T8ANPoARgcG8Ra4NHjG56xYki87A.\",\n",
+    "    \"__Secure-1PSIDTS\": \"sidts-CjEBSAxbGcH6n51q3Fl6c2BKQQ1vXeslVjUZxRYQSE3tOGyZoSiqM7ClQ98QSajRc_vqEAA\"\n",
     "} # bard cookiedict\n",
     "\n",
     "captioner = ImageCaptioner(cookie_dict)"
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -422,13 +423,263 @@
        " 'season': 'ALL'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "captioner(high_res)"
+    "captioner(clothing=high_res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NO NEED TO RUN BELOW:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import os\n",
+    "import psycopg2\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from utils import *\n",
+    "from tqdm.notebook import tqdm\n",
+    "from dotenv import load_dotenv\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cookie_dict = {\n",
+    "    \"__Secure-1PSID\": \"aQiKlcuJ8XuzNiptVGh6CLzm-UC7CgHSNcGiGNkfS0T8ANPoARgcG8Ra4NHjG56xYki87A.\",\n",
+    "    \"__Secure-1PSIDTS\": \"sidts-CjEBSAxbGcH6n51q3Fl6c2BKQQ1vXeslVjUZxRYQSE3tOGyZoSiqM7ClQ98QSajRc_vqEAA\"\n",
+    "} # bard cookiedict\n",
+    "\n",
+    "captioner = ImageCaptioner(cookie_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "preprocessing = [(\"resize\", {\"size\": 1024})]\n",
+    "clothes_path = glob.glob(\"./photos/*\")\n",
+    "clothes = AllClothes()\n",
+    "clothes.clothes = [Clothing(Image.open(f), preprocessing) for f in clothes_path]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# okay lets just upload all the clothing\n",
+    "import glob\n",
+    "\n",
+    "\n",
+    "# db = DB()\n",
+    "# fuck using DB\n",
+    "start = time.time()\n",
+    "for cloth, fpath in zip(clothes.clothes, clothes_path):\n",
+    "    # caption:\n",
+    "    item = captioner(clothing=cloth)\n",
+    "    db = psycopg2.connect(os.environ['DBURL'])\n",
+    "    try:\n",
+    "        sql = f\"\"\"INSERT INTO clothing (color, category, description, material, season, filepath) VALUES ('{item['color']}', '{item['category']}', '{item['description'].replace(\"'\", \"\")}', '{item['material']}', '{item['season']}', '{fpath}')\"\"\"\n",
+    "    except:\n",
+    "        continue\n",
+    "    with db.cursor() as cursor:\n",
+    "        cursor.execute(sql)\n",
+    "        db.commit()\n",
+    "        \n",
+    "    print(time.time() - start)\n",
+    "    start = time.time()\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with db.cursor() as cur:\n",
+    "    d = cur.execute(\"SELECT * FROM clothing\")\n",
+    "    d = cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(102,\n",
+       " 'Black',\n",
+       " 'Jacket',\n",
+       " 'A black suit jacket with a single-breasted button closure and two flap pockets.',\n",
+       " 'Wool',\n",
+       " 'Fall/Winter',\n",
+       " './photos/IMG_0240.jpeg')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(102,\n",
+       " 'Black',\n",
+       " 'Jacket',\n",
+       " 'A black suit jacket with a single-breasted button closure and two flap pockets.',\n",
+       " 'Wool',\n",
+       " 'Fall/Winter',\n",
+       " './photos/IMG_0240.jpeg')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FRESH START WITH NEW LOADERs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import *\n",
+    "from tqdm.notebook import tqdm\n",
+    "from dotenv import load_dotenv\n",
+    "import time\n",
+    "import os\n",
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_clothes = AllClothes._from_DB([(\"resize\",{\"size\":500})])"
    ]
   },
   {
